--- a/scss/components/_links.scss
+++ b/scss/components/_links.scss
@@ -1,9 +1,6 @@
 a {
 	text-decoration: none !important;
-	color: $color_a !important;
-	&:link {
-		color: $color_a_link !important;
-	}
+	color: $color_a;
 	&:visited {
 		color: $color_a_visited !important;
 	}
@@ -12,5 +9,8 @@ a {
 	}
 	&:active {
 		color: $color_a_active !important;
+	}
+	.nav-link{
+		color: white !important;
 	}
 }
