--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -26,7 +26,7 @@ header {
 }
 @media only screen and (min-width : 480px) {
 	.navbar-brand {
-		margin-right: 9rem !important;
+		margin-right: 10rem !important;
 	}
 }
 @media only screen and (min-width : 620px) {
@@ -51,7 +51,7 @@ header {
 }
 @media only screen and (min-width : 1300px) {
 	.navbar-brand {
-		margin-right: 43rem !important;
+		margin-right: 47rem !important;
 	}
 }
 @media only screen and (min-width : 1800px) {
