--- a/scss/layouts/_base-layouts.scss
+++ b/scss/layouts/_base-layouts.scss
@@ -49,3 +49,7 @@
 		font-size: 24px;
 	}
   }
+
+  section{
+	scrollbar-width: none;
+  }
