--- a/scss/utils/_flecha-abajo.scss
+++ b/scss/utils/_flecha-abajo.scss
@@ -6,7 +6,7 @@
 
 .scroll-down-link {
 	position: absolute;
-	z-index: 100;
+	z-index: 50;
 	cursor:pointer;
 	height: 100px;
 	width: 90px;
