--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,7 @@
   scroll-snap-points-y: repeat(100vh);
   -ms-scroll-snap-type: y mandatory;
   scroll-snap-type: y mandatory;
+  scrollbar-width: none;
 }
 #index section {
   height: 100vh;
@@ -50,6 +51,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
+  scrollbar-width: none;
 }
 
 ::selection {
@@ -156,7 +158,7 @@ li {
 
 .scroll-down-link {
   position: absolute;
-  z-index: 100;
+  z-index: 50;
   cursor: pointer;
   height: 100px;
   width: 90px;
@@ -228,10 +230,7 @@ li {
 
 a {
   text-decoration: none !important;
-  color: #335c67 !important;
-}
-a:link {
-  color: rgb(0, 0, 0) !important;
+  color: #335c67;
 }
 a:visited {
   color: #e09f3e !important;
@@ -241,6 +240,9 @@ a:hover {
 }
 a:active {
   color: #540b0e !important;
+}
+a .nav-link {
+  color: white !important;
 }
 
 header {
@@ -270,7 +272,7 @@ header {
 }
 @media only screen and (min-width: 480px) {
   .navbar-brand {
-    margin-right: 9rem !important;
+    margin-right: 10rem !important;
   }
 }
 @media only screen and (min-width: 620px) {
@@ -295,7 +297,7 @@ header {
 }
 @media only screen and (min-width: 1300px) {
   .navbar-brand {
-    margin-right: 43rem !important;
+    margin-right: 47rem !important;
   }
 }
 @media only screen and (min-width: 1800px) {
@@ -400,6 +402,10 @@ footer .container {
 }
 #quienesSomos p {
   font-size: 24px;
+}
+
+section {
+  scrollbar-width: none;
 }
 
 /*# sourceMappingURL=styles.css.map */
